# Meshtastic-Android

./: .aiexclude  .coderabbit.yaml  .copilotignore  .gitattributes  .gitignore  .gitmodules  .jdk  .mcp.json  .pr5167.diff  .project  .release-please-manifest.json  AGENT.md  AGENTS.md  CHANGELOG.md  CHANGES.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURE_DOCUMENTATION.md  GEMINI.md  MIGRATION-REMAINING.md  MessageQueue.md  NOTICE.md  README.md  RELEASE_PROCESS.md  SECURITY.md  SOUL.md  TODO.md  TROUBLESHOOTING.md  build-and-install-android.sh  build.gradle  build.gradle.kts  buildconfig.default.properties  codecov.yml  compose_compiler_config.conf  config.properties  conveyor.conf  crowdin.yml  debugging-android.md  fix_dispatchers.py  (+17 more)
.agent_memory/: session_context.archive.md  session_context.md
.claude/: settings.json  settings.local.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  ci-gradle.properties  copilot-commit-message-instructions.md  copilot-instructions.md  copilot-pull-request-instructions.md  labeler.yml  lsp.json  release-please-config.json  release.yml  (+1 more)
libcodec2-android/src/codec2/demo/: CMakeLists.txt  c2demo.c  freedv_700d_rx.c  freedv_700d_rx.py  freedv_700d_tx.c  freedv_datac0c1_rx.c  freedv_datac0c1_tx.c  freedv_datac1_rx.c  freedv_datac1_tx.c
libcodec2-android/src/codec2/misc/: 16_8_short.c  CMakeLists.txt  de.c  extract.c  ge_train.c  genlsp.c  mksine.c  pre.c  raw2h.c  speexnoisesup.c  tcodec2.c  tdec.c  timpulse.c  tinterp.c  tlininterp.c  tnlp.c  tquant.c  tsrc.c  vq_binary_switch.c  vq_mbest.c  vqtrain.c
libcodec2-android/src/codec2/src/: CMakeLists.txt  H2064_516_sparse_test.h  HRA_112_112.c  HRA_112_112.h  HRA_112_112_test.h  HRA_56_56.c  HRA_56_56.h  HRAa_1536_512.c  HRAa_1536_512.h  HRAb_396_504.c  HRAb_396_504.h  H_1024_2048_4f.c  H_1024_2048_4f.h  H_128_256_5.c  H_128_256_5.h  H_16200_9720.c  H_16200_9720.h  H_2064_516_sparse.c  H_2064_516_sparse.h  H_256_512_4.c  H_256_512_4.h  H_256_768_22.c  H_256_768_22.h  H_4096_8192_3d.c  H_4096_8192_3d.h  _kiss_fft_guts.h  bpf.h  bpfb.h  c2dec.c  c2enc.c  c2file.h  c2sim.c  c2wideband.h  c2wideband_map.h  ch.c  codec2.c  codec2.h  codec2_cohpsk.h  codec2_fdmdv.h  codec2_fft.c  (+147 more)
libcodec2-android/src/codec2/src/codebook/: codes_450.txt  lspvqexp1.txt  lspvqexp2.txt  lspvqexp3.txt  newamp1_energy_q.txt  newamp2_energy_q.txt  train_120_1.txt  train_120_2.txt
libcodec2-android/src/codec2/stm32/: CMakeLists.txt  README.md  stm32_flash.ld  stm32_ram.ld
libcodec2-android/src/codec2/stm32/cmake/: STM32_Lib.cmake  STM32_Toolchain.cmake  arm_header.cmake  gencodebooks.cmake
libcodec2-android/src/codec2/stm32/doc/: sm1000_cn12_rev2.odg  sm1000_manual.md
libcodec2-android/src/codec2/stm32/inc/: debugblinky.h  memtools.h  menu.h  morse.h  sfx.h  sm1000_leds_switches.h  sounds.h  stm32f4_adc.h  stm32f4_dac.h  stm32f4_usart.h  stm32f4_usb_vcp.h  stm32f4_vrom.h  stm32f4xx_conf.h  tone.h  tot.h
libcodec2-android/src/codec2/stm32/src/: adc_rec_usb.c  dac_ut.c  debugblinky.c  memtools.c  menu.c  morse.c  sfx.c  sm1000_leds_switches.c  sm1000_leds_switches_ut.c  sm1000_main.c  sounds.c  startup_stm32f4xx.s  stm32f4_adc.c  stm32f4_dac.c  stm32f4_machdep.c  stm32f4_usart.c  stm32f4_usb_vcp.c  stm32f4_vrom.c  system_stm32f4xx.c  tone.c  tot.c  usart_ut.c  usb_vcp_ut.c  usb_vsp_ut.c
libcodec2-android/src/codec2/stm32/stlink/: elfsym.c  elfsym.h  stlink.patch
libcodec2-android/src/codec2/stm32/unittest/: README_unittest.md
libcodec2-android/src/codec2/stm32/unittest/lib/: ut_travis.enc
libcodec2-android/src/codec2/stm32/unittest/lib/octave/: ofdm_demod_check.m
libcodec2-android/src/codec2/stm32/unittest/lib/python/: sum_profiles.py
libcodec2-android/src/codec2/stm32/unittest/scripts/: check_ram_limit  kill_run_stm32_tst  plot_ofdm_demod_syms  run_all_codec2_tests  run_all_ldpc_tests  run_all_ofdm_tests  run_all_stm32_tests  run_stm32_prog  run_stm32_tst  run_tests_common.sh  setup.sh  stm_stderr.txt  stm_stdout.txt  sum_profiles  tst_api_demod_check  tst_api_demod_setup  tst_api_mod_check  tst_api_mod_setup  tst_codec2_dec_check  tst_codec2_dec_setup  tst_codec2_enc_check  tst_codec2_enc_setup  tst_ldpc_dec_check  tst_ldpc_dec_setup  tst_ldpc_enc_check  tst_ldpc_enc_setup  tst_ofdm_demod_check  tst_ofdm_demod_setup  tst_ofdm_mod_check  tst_ofdm_mod_setup
libcodec2-android/src/codec2/stm32/unittest/src/: CMakeLists.txt  Makefile  init.c  semihosting.c  semihosting.h  startup_stm32f4xx.s  tst_api_demod.c  tst_api_demod_700d_profile.c  tst_api_mod.c  tst_api_mod_700d_profile.c  tst_api_tx.c  tst_codec2_dec.c  tst_codec2_enc.c  tst_codec2_fft_init.c  tst_ldpc_dec.c  tst_ldpc_enc.c  tst_ofdm_demod.c  tst_ofdm_mod.c  tst_semihost.c
libcodec2-android/src/codec2/stm32/usb_conf/: usb_bsp.c  usb_bsp.h  usb_conf.h  usbd_conf.h  usbd_desc.c
libcodec2-android/src/codec2/stm32/usb_lib/cdc/: usbd_cdc_core.c  usbd_cdc_core.h  usbd_cdc_vcp.c  usbd_cdc_vcp.h
libcodec2-android/src/codec2/stm32/usb_lib/core/: usbd_core.c  usbd_core.h  usbd_def.h  usbd_ioreq.c  usbd_ioreq.h  usbd_req.c  usbd_req.h  usbd_usr.h
libcodec2-android/src/codec2/stm32/usb_lib/otg/: usb_core.c  usb_core.h  usb_dcd.c  usb_dcd.h  usb_dcd_int.c  usb_dcd_int.h  usb_defines.h  usb_regs.h
libcodec2-android/src/codec2/unittest/: CMakeLists.txt  check_real_comp.sh  compare_floats.c  compare_ints.c  fading_files.sh  fdmdv_mem.c  freedv_700d_comprx.c  freedv_700d_comptx.c  function_trace.c  hts1a.h  hts1a_1300.h  ofdm_check  ofdm_fade.sh  ofdm_fade_dpsk.sh  ofdm_mem.c  ofdm_phase_est_bw.sh  ofdm_stack.c  ofdm_time_sync.sh  ota_auto.sh  ota_last.sh  ota_summary.sh  ota_test.sh  ota_voice_auto.sh  ota_voice_summary.sh  ota_voice_test.sh  reliable_text_fade.sh  sd.c  sd.h  sum_debug_alloc  t16_8.c  t16_8_short.c  t48_8.c  t48_8_short.c  t_helpers.c  t_helpers.h  tcohpsk.c  tcontphase.c  tdeframer.c  tesno_est.c  test_700c_eq.sh  (+21 more)
libcodec2-android/src/main/cpp/: CMakeLists.txt  Codec2JNI.cpp
libcodec2-android/src/main/cpp/codec2/: codec2.h  modem_stats.h  varicode.h
libcodec2-android/src/main/cpp/codec2/codec2/: version.h
(+18044 files in other folders)
