add_definitions(-DFLOATING_POINT -DVAR_ARRAYS)
include_directories(../src)

add_executable(c2demo c2demo.c)
target_link_libraries(c2demo codec2)
add_executable(freedv_700d_tx freedv_700d_tx.c)
target_link_libraries(freedv_700d_tx codec2)
add_executable(freedv_700d_rx freedv_700d_rx.c)
target_link_libraries(freedv_700d_rx codec2)
add_executable(freedv_datac1_tx freedv_datac1_tx.c)
target_link_libraries(freedv_datac1_tx codec2)
add_executable(freedv_datac1_rx freedv_datac1_rx.c)
target_link_libraries(freedv_datac1_rx codec2)
add_executable(freedv_datac0c1_tx freedv_datac0c1_tx.c)
target_link_libraries(freedv_datac0c1_tx codec2)
add_executable(freedv_datac0c1_rx freedv_datac0c1_rx.c)
target_link_libraries(freedv_datac0c1_rx codec2)
